--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Iulian Varzaru - Android / Web Application Developer</title>
-	<link rel="stylesheet" href="_assets/css/style.css">
+	<link rel="stylesheet" href="assets/css/style.css">
 <!--
 
   _       _ _                             
